--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
     "styled-components": "^5.3.5",
+    "form-data": "^4.0.0",
     "typescript": "4.7.4"
   },
   "devDependencies": {
