--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "typescript-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://jmvnzhumqj.execute-api.us-east-1.amazonaws.com/dev",
   "dependencies": {
     "@types/aws-lambda": "^8.10.102",
     "@types/node": "18.7.6",
