--- a/client/package.json
+++ b/client/package.json
@@ -8,15 +8,16 @@
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "@types/react-router-dom": "^5.3.3",
+    "cors-anywhere": "^0.4.4",
     "dateformat": "^5.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "form-data": "^4.0.0",
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
     "styled-components": "^5.3.5",
-    "form-data": "^4.0.0",
     "typescript": "4.7.4"
   },
   "devDependencies": {
@@ -40,7 +41,7 @@
   "peerDependencies": {
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
- },
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
